[package]
authors = ["Hiromitsu Oshiba <0x75960@chocola.tech>"]
edition = "2018"
name = "iocutil"
version = "0.1.2"
license = "MIT"
description = """
IoC utilities for malware researchers
"""
repository = "https://github.com/0x75960/iocutil.rs"
readme = "README.md"

[dependencies]
chrono = "0.4.9"
derive_builder = "0.8.1"
failure = "0.1.6"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
regex = "1.3.1"
reqwest = "0.9.22"
rust-crypto = "0.2.36"
scraper = "0.11.0"
time = "0.1.42"

[dependencies.serde]
features = ["derive"]
version = "1.0.102"
